--- a/content/functions.mdx
+++ b/content/functions.mdx
@@ -7,19 +7,19 @@ title: "Funktiot"
 
 Mikä funktio ohjelmointikielessä oikein on? Tyypillisesti funktio on samanlainen kuin matematiikassa: funktiolle syötetään jokin arvo
 tai arvoja ("input") ja näiden arvojen avulla lasketaan jotain ja pullautetaan tulos ulos ("output").
-Alla olevassa esimerkissä on määritelty funktio nimeltä ```summa``` jolle voidaan syöttää inputtina kaksi lukua ```x``` ja ```y```.
-Funktio laskee lukujen ```x``` ja ```y``` summan ja pullauttaa tämän ulos.
+Alla olevassa esimerkissä on määritelty funktio nimeltä `summa` jolle voidaan syöttää inputtina kaksi lukua `x` ja `y`.
+Funktio laskee lukujen `x` ja `y` summan ja pullauttaa tämän ulos.
 
 <Obs>
 
 Virallinen termi ulos pullauttamiselle on "palauttaa arvo", tästä syystä
-Pythonissa käytetään ```return``` nimistä käskyä funktioissa.
+Pythonissa käytetään `return` nimistä käskyä funktioissa.
 
 </Obs>
 
 <Obs>
 
-```def``` tulee sanasta <em>define</em> eli "määrittele". Huomaa myös sisennys rivillä 2. Sisennys kertoo Pythonissa mitkä käskyt ovat
+`def` tulee sanasta <em>define</em> eli "määrittele". Huomaa myös sisennys rivillä 2. Sisennys kertoo Pythonissa mitkä käskyt ovat
 osa funktiota. Sisennys tehdään tabulaattori-näppäimen avulla. Tabulaattori on Caps Lock -näppäimen yläpuolella. Mikä on sitten Caps Lock näppäin? No, se 
 on tietysti tabulaattorin alapuolella!
 
@@ -29,20 +29,20 @@ on tietysti tabulaattorin alapuolella!
 
 <Obs>
 
-Edellisessä on syytä kiinnittää huomiota riviin 5, jossa on käsky ```summa(3, 5)```. Koska kyseessä on sijoitusoperaatio, käsky on syytä taas ajatella "oikealta vasemmalle":
+Edellisessä on syytä kiinnittää huomiota riviin 5, jossa on käsky `summa(3, 5)`. Koska kyseessä on sijoitusoperaatio, käsky on syytä taas ajatella "oikealta vasemmalle":
 
 ***
 
-* Funktiokutsu ```summa(3, 5)``` laskee lukujen 3 ja 5 summan ja palauttaa summan arvon.
-* Palautettu arvo sijoitetaan muuttujaan ```tulos```
+* Funktiokutsu `summa(3, 5)` laskee lukujen 3 ja 5 summan ja palauttaa summan arvon.
+* Palautettu arvo sijoitetaan muuttujaan `tulos`
 
 </Obs>
 
-Seuraavaksi rohkeasti kokeilemaan omien funktioiden laadintaa! Testaa laatimiesi funktioden toimintaa ```print``` käskyn avulla.
+Seuraavaksi rohkeasti kokeilemaan omien funktioiden laadintaa! Testaa laatimiesi funktioden toimintaa `print` käskyn avulla.
 
 ### 1.1
 
-Nimeä funktio uudestaan ja anna sille nimi ```tulo``` ja muokkaa funktiota siten että se laskee lukujen ```x``` ja ```y``` tulon
+Nimeä funktio uudestaan ja anna sille nimi `tulo` ja muokkaa funktiota siten että se laskee lukujen `x` ja `y` tulon
 ja palauttaa tulon arvon.
 
 ### 1.2
@@ -56,26 +56,26 @@ Luo uusi funktio, joka laskee kolmen argumenttina annetun luvun tulon.
 
 <Segment title="2. Matematiikasta tuttuja funktioita">
 
-Muista seuraavissa tehtävissä testata laatimiesi funktioiden toimintaa ```print```-käskyn avulla.
+Muista seuraavissa tehtävissä testata laatimiesi funktioiden toimintaa `print`-käskyn avulla.
 <Trinket id="6952c692bc" height="300"/>
 
 ### 2.1
 
-Luo funktio nimeltä ```piiri```, jolle syötetään säteen ```r``` pituus. Funktion tulee laskea ympyrän kehän pituus.
+Luo funktio nimeltä `piiri`, jolle syötetään säteen `r` pituus. Funktion tulee laskea ympyrän kehän pituus.
 
 <Obs>
 
-Koodiin on valmiiksi lisätty käsky ```from math import sqrt, pi``` joten käytössäsi on muuttuja ```pi``` (pii) ja funktio ```sqrt``` eli neliöjuuri.
+Koodiin on valmiiksi lisätty käsky `from math import sqrt, pi` joten käytössäsi on muuttuja `pi` (pii) ja funktio `sqrt` eli neliöjuuri.
 
 </Obs>
 
 ### 2.2
 
-Luo funktio nimeltä ```pinta_ala```, jolle syötetään säteen ```r``` pituus. Funktion tulee laskea ympyrän pinta-ala.
+Luo funktio nimeltä `pinta_ala`, jolle syötetään säteen `r` pituus. Funktion tulee laskea ympyrän pinta-ala.
 
 ### 2.3
 
-Luo funktio nimeltä ```hypotenuusa```, jolle annetaan inputtina kaksi eri lukua ```a``` ja ```b```, jotka ovat suorakulmaisen
+Luo funktio nimeltä `hypotenuusa`, jolle annetaan inputtina kaksi eri lukua `a` ja `b`, jotka ovat suorakulmaisen
 kolmion kateettien pituudet. Funktion tulee laskea hypotenuusan pituus.
 </Segment>
 
@@ -92,10 +92,10 @@ matematiikassa.
 
 ### 3.1
 
-Lisää edelliseen koodiin funktio nimeltä ```greeter2``` jolle syötetään kaksi eri muuttujan arvoa ```first_name``` ja ```last_name```. Funktio ei palauta
+Lisää edelliseen koodiin funktio nimeltä `greeter2` jolle syötetään kaksi eri muuttujan arvoa `first_name` ja `last_name`. Funktio ei palauta
 mitään arvoja vaan sen sijasta tulostaa muuttujien arvojen avulla esimerkiksi seuraavanlaisen tekstin:
 
-```Hyvää päivää Oliver Starck. Voinko kutsua sinua etunimelläsi Oliver?```
+`Hyvää päivää Oliver Starck. Voinko kutsua sinua etunimelläsi Oliver?`
 
 ### 3.2
 
@@ -110,6 +110,6 @@ def sata():
 
 </Obs>
 
-Luo funktio jolle ei syötetä mitään arvoa. Funktio ainoastaan tulostaa tekstin ```moi!```.
+Luo funktio jolle ei syötetä mitään arvoa. Funktio ainoastaan tulostaa tekstin `moi!`.
 
 </Segment>
