Make a huge mess

--- a/content/algorithms.mdx
+++ b/content/algorithms.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Algoritmit"
+slug: "algorithms"
 ---
 
 Olet varmasti kuullut algoritmeistä. Algoritmi on Wikipedia mukaan määritelty seuraavasti:
