--- a/content/input.mdx
+++ b/content/input.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Syötteen lukeminen käyttäjältä"
+slug: "input"
 ---
 
 Yleensä sovellukset ovat vuorovaikutteisia eli interaktiivisia, toisin sanoen käyttäjä pystyy jollain tavalla vaikuttaa sovelluksen toimintaan. Tässä
