--- a/content/loops.mdx
+++ b/content/loops.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Toistolauseet eli silmukat (tai luupit, engl. loops)"
+slug: "loops"
 ---
 
 Tässä osassa käsitellään toistolauseita eli silmukoita ("luuppeja"). Toistolauseen avulla jotain käskyjoukkoa suoritetaan monta kertaa peräjälkeen.
