--- a/content/math.mdx
+++ b/content/math.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hieman matikkaa"
+slug: "math"
 ---
 
 Tässä osiossa teemme hieman matematiikkaa Pythonin avulla aiemmin opittujen asioiden avulla. Koodaamisen kautta kertaamme muutamia matematiikkaa liittyviä asioita. Käytämme
