--- a/content/ifelse.mdx
+++ b/content/ifelse.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Ehtolauseet"
+title: "ifelse
 ---
 
 Ehtolauseiden avulla ohjelma voi suorittaa vaihtoehtoisia asioita riippuen siitä onko jokin ehto tosi vai epätosi. Python-ohjelmointikielessä
