Make a bigger mess

--- a/content/ifelse.mdx
+++ b/content/ifelse.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ehtolauseet"
-title: "ifelse
+slug: "ifelse"
 ---
 
 Ehtolauseiden avulla ohjelma voi suorittaa vaihtoehtoisia asioita riippuen siitä onko jokin ehto tosi vai epätosi. Python-ohjelmointikielessä
