--- a/content/loops.mdx
+++ b/content/loops.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Toistolauseet eli silmukat (tai luupit, engl. loops)"
+title: "5. Toistolauseet eli silmukat (luupit, engl. loops)"
 slug: "loops"
 ---
 
