Add task to if and loops

--- a/content/ifelse.mdx
+++ b/content/ifelse.mdx
@@ -139,3 +139,26 @@ Täydennä alla olevaa ohjelmakoodia siten, että se kertoo käyttäjän syötte
 <Trinket id="fad5cd809e" height="350"/>
 
 </Segment>
+
+<Segment title="4. Tutustuminen silmukkaan">
+
+Tehdään alla olevaan pohjaan arvauspeli, jossa tietokone "ajattelee" jotain lukua välillä 1-100 ja käyttäjän tulee arvata mikä luku on kyseessä.
+Ohjelmassa on `while`-silmukka, jota siis toistetaan ikuisesti, kunnes käyttäjä arvaa luvun oikein, jolloin silmukka terminoidaan
+`break` komennolla.
+
+`While`-silmukka siis suorittaa samaa käskyjoukkoa uudestaan ja uudestaan niin kauan kuin sille annettu ehto on tosi. Tässä tilanteessa ehto on `True` ja tosi on aina tosi.
+
+### 4.1
+Pelihän toimii jo, mutta on vähän tylsä, sillä tietokone ei anna mitään vinkkiä menikö arvaus lähimaillekaan.
+Muuta peliä siten että tietokone vinkkaa oliko käyttäjän arvaama luku liian iso vai liian pieni.
+
+### 4.2
+Lisää ominaisuus, jossa tietokone sanoo "polttaa" kuin arvaus on lähempänä kuin 5. Käytä itseisarvofunktiota (`abs`).
+
+
+<Trinket id="5e21f2da5e" height="400"/>
+
+### 4.3 
+Lisää vielä ominaisuus, jossa käyttäjältä pyydetään pelin alussa sitä, mikä on suurin luku mitä tietokone voi 'ajatella'.
+
+</Segment>
